--- a/client/src/components/SideBar/SideBar.css
+++ b/client/src/components/SideBar/SideBar.css
@@ -59,3 +59,9 @@
     margin: 0 5px;
     cursor: pointer;
 }
+
+@media (min-width: 414px) and (max-width: 1024px) {
+    .sidebar {
+        display: none;
+    }
+}
