--- a/client/src/components/TopBar/TopBar.css
+++ b/client/src/components/TopBar/TopBar.css
@@ -52,7 +52,7 @@
     justify-content: center;
 }
 
-.top-list-item {
+.top-list-item{
     margin: 0 15px;
     cursor: pointer;
 }
@@ -60,4 +60,63 @@
 .link {
     text-decoration: none;
     color: #333;
+}
+
+.top-bar-mobile, .sidebar-mobile {
+    display: none;
+}
+
+.sidebar-mobile {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 20;
+    background-color: #666;
+}
+
+.top-list-mobile {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.top-list-item-mobile {
+    margin: 30px 0;
+    cursor: pointer;
+}
+
+.link-mobile {
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+}
+
+.close-sidebar {
+    text-align: right;
+    margin: 10px;
+    cursor: pointer;
+    color: white;
+    font-weight: 700;
+}
+
+@media screen and (min-width: 414px) and (max-width: 767px) { 
+    .top-bar-left {
+        justify-content: flex-start;
+    }
+
+    .top-bar-right, .top-bar-mid {
+        display: none;
+    }
+
+    .top-bar-mobile {
+        display: block;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    
 }
